k8s/gol_chart/templates/jgaming-api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jgaming-api
  labels:
    app: jgaming-api
spec:
  selector:
    app: jgaming-api
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
