k8s/gol_chart/templates/jgaming-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jgaming-api
  labels:
    app: jgaming-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jgaming-api
  template:
    metadata:
      labels:
        app: jgaming-api
    spec:
      containers:
      - name: jgaming-api
        image: docker.io/joesharpcs/jgaming-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jgaming-api
spec:
  type: LoadBalancer
  selector:
    app: jgaming-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
