k8s/gol_chart/templates/jgaming-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jgaming-service
  namespace: gol
  labels:
    app: jgaming-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jgaming-service
  template:
    metadata:
      labels:
        app: jgaming-service
    spec:
      containers:
      - name: jgaming-service
        image: docker.io/joesharpcs/jgaming-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jgaming-service
  namespace: gol
spec:
  type: LoadBalancer
  selector:
    app: jgaming-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
      nodePort: 30001
