k8s/gol_chart/templates/jgaming-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jgaming-ingress
spec:
  rules:
  - host: joesharpcs.api.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jgaming-api
            port:
              number: 8080
  - host: joesharpcs.ui.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jgaming-ui
            port:
              number: 9080
---
